adding filter to the get /orders
